# mod_ftpd

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NOTICE  README  TODO  TODO_HEADER  aclocal.m4  autogen.sh  build.bat  config-stubs  configure.ac  configure.in  ftp.h  ftp_core.c  ftp_module.c  ftp_protocol.c  gen_todo.pl  httpd_ftp.prj  index.xml  m4update.sh  mod_ftp.c  mod_ftp.h  mod_ftpd.h  mod_ftpd.prj  providers.c  server_config.h  win32.c  winconfig.h
docs/: .cvsignore  Makefile.in  index.xml  manual.xml
docs/rfc/: Makefile.in
m4/: providers.m4
providers/dbi/: .cvsignore  Makefile.in  autogen.sh  config.m4  configure.ac  mod_ftp_dbi.c  mod_ftpd_dbi.c
providers/dbi/m4/: apache.m4
providers/dbm/: .cvsignore  Makefile  Makefile.in  autogen.sh  config.m4  configure.ac  dbmchroot  mod_ftp_dbm.c  mod_ftpd_dbm.c
providers/default/: Makefile.in  config.m4  configure.ac  mod_ftp_default.c  mod_ftpd_default.c
providers/fail/: .cvsignore  Makefile.in  config.m4  configure.ac  mod_ftp_fail.c  mod_ftpd_fail.c
